--- a/OpenClosedPrinciple.Tests/OpenClosedPrinciple.Tests.csproj
+++ b/OpenClosedPrinciple.Tests/OpenClosedPrinciple.Tests.csproj
@@ -21,4 +21,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\OpenClosedPrinciple\OpenClosedPrinciple.csproj" />
+    </ItemGroup>
+
 </Project>
