--- a/TestsOfSOLID/TestsOfSOLID.csproj
+++ b/TestsOfSOLID/TestsOfSOLID.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\SelectableUserInterface\SelectableUserInterface.csproj" />
       <ProjectReference Include="..\SingleResponsibilityPrinciple\SingleResponsibilityPrinciple.csproj" />
     </ItemGroup>
 
